--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav id="navbar">
       <ul id="nav-list">
-        <li class="nav-option" id="CV"><a href=""><i class="fa-regular fa-file"></i> CV</a></li>
+        <li class="nav-option" id="CV"><a href="Resume_Trevor_Herr.pdf"><i class="fa-regular fa-file"></i> CV</a></li>
         <li class="nav-option"><a href="#welcome-header"><i class="fa-solid fa-address-card"></i> About</a></li>
         <li class="nav-option"><a href="#projects"><i class="fa-solid fa-diagram-project"></i> Projects</a></li>
         <li class="nav-option"><a href="#contact"><i class="fa-solid fa-message"></i> Contact</a></li>
@@ -25,7 +25,6 @@
         <iframe src="https://www.youtube.com/embed/2sfehOWWms8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </section>
-    <hr class="seperator">
     <section id="projects" class="projects">
       <div id="projects-header">
         <h2>Check out my Excel Templates and other personal projects</h2>
@@ -54,19 +53,21 @@
     <section id="contact">
       <h2>Want to get in touch?</h2>
       <div id="contacts-list">
-        <a href="" target="_blank">
+        <a class="profile-link" href="" target="_blank">
           <div id="linkedin" class="button">
-            <p>Linkedin</p>
+            <img class="link-icons" src="Social Icons/linkedin-icon">
+            <p>LinkedIn</p>
           </div>
         </a>
-        <a id="profile-link" href="" target="_blank">
+        <a class="profile-link" href="" target="_blank">
           <div id="twitter" class="button">
+            <img class="link-icons" src="Social Icons/twitter-icon">
             <p>Twitter</p>
           </div>
         </a>
-        <a href="" target="_blank">
+        <a class="profile-link" href="" target="_blank">
           <div id="email" class="button">
-            <p>Email</p>
+            <p><i class="fa-solid fa-envelope"></i> Email</p>
           </div>
         </a>
       </div>
