--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div id="projects-list">
         <a class="project-tile" href="https://drive.google.com/drive/folders/15LlPo2_eUxBuXO4WFOsSohjzHkVVwqpX?usp=sharing" target="_blank">
-          <p class="project-title">Portfolio Template</p>
+          <p class="project-title" id="portfolio-template">Portfolio Template</p>
         </a>
         <a class="project-tile" href="https://docs.google.com/spreadsheets/d/1RNwcK_SX1ClYrNS_DAmcsh9vYjPuOBGk/edit?usp=sharing&ouid=100306179132600832649&rtpof=true&sd=true" target="_blank">
           <p class="project-title">Canadian ETF Comparisons (Ongoing)</p>
@@ -46,26 +46,26 @@
           <p class="project-title">Apple Stock Price during Events</p>
         </a>
         <a class="project-tile" href="" target="_blank">
-          <p class="project-title">Youtube Channel</p>
+          <p class="project-title" id="youtube">Youtube Channel</p>
         </a>
       </div>  
     </section>
     <section id="contact">
       <h2>Want to get in touch?</h2>
       <div id="contacts-list">
-        <a class="profile-link" href="" target="_blank">
+        <a class="profile-link" href="https://www.linkedin.com/in/trevor-herr/" target="_blank">
           <div id="linkedin" class="button">
             <img class="link-icons" src="Social Icons/linkedin-icon">
-            <p>LinkedIn</p>
+            <p class="buttontext">LinkedIn</p>
           </div>
         </a>
-        <a class="profile-link" href="" target="_blank">
+        <a class="profile-link" href="https://twitter.com/trevor_herr" target="_blank">
           <div id="twitter" class="button">
             <img class="link-icons" src="Social Icons/twitter-icon">
-            <p>Twitter</p>
+            <p class="buttontext">Twitter</p>
           </div>
         </a>
-        <a class="profile-link" href="" target="_blank">
+        <a class="profile-link" href="mailto:trevor.herr@mail.utoronto.ca" target="_blank">
           <div id="email" class="button">
             <p><i class="fa-solid fa-envelope"></i> Email</p>
           </div>
