--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       <div id="contacts-list">
         <a class="profile-link" href="https://www.linkedin.com/in/trevor-herr/" target="_blank">
           <div id="linkedin" class="button">
-            <img class="link-icons" src="Social Icons/linkedin-icon">
+            <img class="link-icons" src="Icons/linkedin-icon.svg">
             <p class="buttontext">LinkedIn</p>
           </div>
         </a>
         <a class="profile-link" href="https://twitter.com/trevor_herr" target="_blank">
           <div id="twitter" class="button">
-            <img class="link-icons" src="Social Icons/twitter-icon">
+            <img class="link-icons" src="Icons/twitter-icon.svg">
             <p class="buttontext">Twitter</p>
           </div>
         </a>
