--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav id="navbar">
       <ul id="nav-list">
-        <li class="nav-option" id="CV"><a href="Resume_Trevor_Herr.pdf"><i class="fa-regular fa-file"></i> CV</a></li>
+        <li class="nav-option" id="CV"><a href="Resume_Trevor_Herr.pdf" target="_blank"><i class="fa-regular fa-file"></i> CV</a></li>
         <li class="nav-option"><a href="#welcome-header"><i class="fa-solid fa-address-card"></i> About</a></li>
         <li class="nav-option"><a href="#projects"><i class="fa-solid fa-diagram-project"></i> Projects</a></li>
         <li class="nav-option"><a href="#contact"><i class="fa-solid fa-message"></i> Contact</a></li>
