--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial scale=1.0">
     <title>Trevor Herr</title>
+    <meta name="description" content="Finance Professional">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="John Doe">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/82ea444ed6.js" crossorigin="anonymous"></script>
   </head>
@@ -31,21 +34,21 @@
       </div>
       <div id="projects-list">
         <a class="project-tile" href="https://drive.google.com/drive/folders/15LlPo2_eUxBuXO4WFOsSohjzHkVVwqpX?usp=sharing" target="_blank">
-          <p class="project-title" id="portfolio-template">Portfolio Template</p>
+          <p class="project-title" id="portfolio-template">Stock Portfolio Template</p>
         </a>
         <a class="project-tile" href="https://docs.google.com/spreadsheets/d/1RNwcK_SX1ClYrNS_DAmcsh9vYjPuOBGk/edit?usp=sharing&ouid=100306179132600832649&rtpof=true&sd=true" target="_blank">
-          <p class="project-title">Canadian ETF Comparisons (Ongoing)</p>
+          <p class="project-title">Canadian ETF Screener</p>
         </a>
         <a class="project-tile" href="https://docs.google.com/spreadsheets/d/15i9AWW2IKer2-Cf-VmRvzYO7BLXn-hSJ/edit?usp=sharing&ouid=100306179132600832649&rtpof=true&sd=true" target="_blank">
-          <p class="project-title">Company Valuation Template (Ongoing)</p>
+          <p class="project-title">Stock Valuation Template</p>
         </a>
         <a class="project-tile" href="https://docs.google.com/spreadsheets/d/1qGZgrZfwQO--ti6PpbJiS8ML2R-jdB36/edit?usp=sharing&ouid=100306179132600832649&rtpof=true&sd=true" target="_blank">
           <p class="project-title">Ontario Gas Price Analysis (Updated periodically)</p>
         </a>
-        <a class="project-tile" href="" target="_blank">
-          <p class="project-title">Apple Stock Price during Events</p>
+        <a class="project-tile" href="https://drive.google.com/drive/folders/1pa4VQMFrw92ZE-z_N25KiBFcBT48r17h?usp=share_link" target="_blank">
+          <p class="project-title">Apple Stock during Events</p>
         </a>
-        <a class="project-tile" href="" target="_blank">
+        <a class="project-tile" href="https://www.youtube.com/channel/UCGGmyv88TDQeAkOz-42mZAA" target="_blank">
           <p class="project-title" id="youtube">Youtube Channel</p>
         </a>
       </div>  
