--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width initial scale=1.0">
     <title>Trevor Herr</title>
     <meta name="description" content="Finance Professional">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="John Doe">
+    <meta name="keywords" content="Finance, Stocks, Economics, Excel, Job, Toronto">
+    <meta name="author" content="Trevor Herr">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/82ea444ed6.js" crossorigin="anonymous"></script>
   </head>
@@ -23,6 +23,9 @@
       <div id="welcome-header">
         <h1>Trevor Herr</h1>
         <p><i>Finance Professional</i></p>
+      </div>
+      <div id="resume">
+        <a id="resume-link" href="Resume_Trevor_Herr.pdf" target="_blank"><i class="fa-regular fa-file"></i> CV</a>
       </div>
       <div id="welcome-video">
         <iframe src="https://www.youtube.com/embed/2sfehOWWms8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -49,7 +52,7 @@
           <p class="project-title">Apple Stock during Events</p>
         </a>
         <a class="project-tile" href="https://www.youtube.com/channel/UCGGmyv88TDQeAkOz-42mZAA" target="_blank">
-          <p class="project-title" id="youtube">Youtube Channel</p>
+          <p class="project-title" id="youtube">YouTube Channel</p>
         </a>
       </div>  
     </section>
