--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <a class="project-tile" href="https://drive.google.com/drive/folders/15LlPo2_eUxBuXO4WFOsSohjzHkVVwqpX?usp=sharing" target="_blank">
           <p class="project-title" id="portfolio-template">Stock Portfolio Template</p>
         </a>
-        <a class="project-tile" href="https://docs.google.com/spreadsheets/d/1RluSo_Smyrb8yrNQ-oh5xP8apzvw8_zv/edit?usp=sharing&ouid=100306179132600832649&rtpof=true&sd=true" target="_blank">
-          <p class="project-title">Canadian ETF Screener</p>
+        <a class="project-tile" href="https://www.dropbox.com/s/dtd28msxa7k61kl/Canadian%20Listed%20Equity%20ETF%20Screener%20v1.0%20Public.xlsx?dl=0" target="_blank">
+          <p class="project-title">Canadian Listed Equity ETF Screener</p>
         </a>
         <a class="project-tile" href="https://docs.google.com/spreadsheets/d/15i9AWW2IKer2-Cf-VmRvzYO7BLXn-hSJ/edit?usp=sharing&ouid=100306179132600832649&rtpof=true&sd=true" target="_blank">
           <p class="project-title">Stock Valuation Template</p>
