--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width initial scale=1.0">
     <title>Trevor Herr</title>
     <meta name="description" content="Finance Professional">
-    <meta name="keywords" content="Finance, Stocks, Economics, Excel, Job, Toronto">
+    <meta name="keywords" content="Finance, Stocks, Economics, Excel, Job, Toronto, Career, Canada, Canadian, Equity, Analyst, Data, Law, Legal, Business">
     <meta name="author" content="Trevor Herr">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/82ea444ed6.js" crossorigin="anonymous"></script>
@@ -55,6 +55,18 @@
         </a>
       </div>  
     </section>
+    <section id="blog">
+      <div id="retainable-rss-embed" 
+        data-rss="https://medium.com/feed/retainable,
+        https://medium.com/feed/trevor_herr"
+        data-maxcols="3" 
+        data-layout="grid" 
+        data-poststyle="inline" 
+        data-readmore="Read the rest" 
+        data-buttonclass="btn btn-primary" 
+        data-offset="-100">
+      </div>
+    </section>
     <section id="contact">
       <h2>Want to get in touch?</h2>
       <div id="contacts-list">
@@ -79,6 +91,7 @@
     </section>
     <footer>
       <p>Copyright © 2023 Trevor Herr</p>
+      <script src="https://www.twilik.com/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
     </footer>
   </body>
 </html>
