--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
     </section>
     <section id="blog">
       <div id="retainable-rss-embed" 
-        data-rss="https://medium.com/feed/retainable,
-        https://medium.com/feed/trevor_herr"
+        data-rss="https://medium.com/feed/@username"
         data-maxcols="3" 
         data-layout="grid" 
         data-poststyle="inline" 
@@ -91,7 +90,7 @@
     </section>
     <footer>
       <p>Copyright © 2023 Trevor Herr</p>
-      <script src="https://www.twilik.com/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
+      <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
     </footer>
   </body>
 </html>
