--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
     <section id="blog">
       <div id="retainable-rss-embed" 
-        data-rss="https://medium.com/feed/@username"
+        data-rss="https://medium.com/feed/@trevor_herr"
         data-maxcols="3" 
         data-layout="grid" 
         data-poststyle="inline" 
