--- a/index.html
+++ b/index.html
@@ -56,15 +56,14 @@
       </div>  
     </section>
     <section id="blog">
-      <div id="retainable-rss-embed" 
-        data-rss="https://medium.com/feed/@trevor_herr"
+      <h2 id="blogheader">Check out my Medium Posts</h2>
+      <div id="retainable-rss-embed" data-rss="https://medium.com/feed/@trevor_herr"
         data-maxcols="3" 
-        data-layout="grid" 
-        data-poststyle="inline" 
-        data-readmore="Read the rest" 
+        data-layout="slider" 
+        data-poststyle="external" 
+        data-readmore= " " 
         data-buttonclass="btn btn-primary" 
         data-offset="-100">
-      </div>
     </section>
     <section id="contact">
       <h2>Want to get in touch?</h2>
@@ -86,11 +85,21 @@
             <p><i class="fa-solid fa-envelope"></i> Email</p>
           </div>
         </a>
+        <a class="profile-link" href="https://www.youtube.com/channel/UCGGmyv88TDQeAkOz-42mZAA" target="_blank">
+          <div id="YT" class="button">
+            <p><i class="fa-brands fa-youtube"></i> Youtube</p>
+          </div>
+        </a>
+        <a class="profile-link" href="https://www.goodreads.com/trevor_herr" target="_blank">
+          <div id="goodreads" class="button">
+            <p><i class="fa-brands fa-goodreads"></i> Goodreads</p>
+          </div>
+        </a>
       </div>
     </section>
     <footer>
       <p>Copyright © 2023 Trevor Herr</p>
-      <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
+      <script src="https://www.twilik.com/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
     </footer>
   </body>
 </html>
