--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Check out my Excel Templates and other personal projects</h2>
       </div>
       <div id="projects-list">
-        <a class="project-tile" href="https://drive.google.com/drive/folders/15LlPo2_eUxBuXO4WFOsSohjzHkVVwqpX?usp=sharing" target="_blank">
+        <a class="project-tile" href="https://www.dropbox.com/scl/fi/vgteqkm8pwdxm3y87hip9/Stock_Portfolio_Template.xlsm?rlkey=tofoaovv6flsykfsrtcxwqb4b&dl=0" target="_blank">
           <p class="project-title" id="portfolio-template">Stock Portfolio Template</p>
         </a>
         <a class="project-tile" href="https://www.dropbox.com/s/dtd28msxa7k61kl/Canadian%20Listed%20Equity%20ETF%20Screener%20v1.0%20Public.xlsx?dl=0" target="_blank">
