--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a class="project-tile" href="https://www.dropbox.com/s/dtd28msxa7k61kl/Canadian%20Listed%20Equity%20ETF%20Screener%20v1.0%20Public.xlsx?dl=0" target="_blank">
           <p class="project-title">Canadian Listed Equity ETF Screener</p>
         </a>
-        <a class="project-tile" href="https://docs.google.com/spreadsheets/d/15i9AWW2IKer2-Cf-VmRvzYO7BLXn-hSJ/edit?usp=sharing&ouid=100306179132600832649&rtpof=true&sd=true" target="_blank">
+        <a class="project-tile" href="https://www.dropbox.com/scl/fi/vgteqkm8pwdxm3y87hip9/Stock_Portfolio_Template.xlsm?rlkey=tofoaovv6flsykfsrtcxwqb4b&dl=0" target="_blank">
           <p class="project-title">Stock Valuation Template</p>
         </a>
         <a class="project-tile" href="https://docs.google.com/spreadsheets/d/1qGZgrZfwQO--ti6PpbJiS8ML2R-jdB36/edit?usp=sharing&ouid=100306179132600832649&rtpof=true&sd=true" target="_blank">
