--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a class="project-tile" href="https://www.dropbox.com/scl/fi/vgteqkm8pwdxm3y87hip9/Stock_Portfolio_Template.xlsm?rlkey=tofoaovv6flsykfsrtcxwqb4b&dl=0" target="_blank">
           <p class="project-title" id="portfolio-template">Stock Portfolio Template</p>
         </a>
-        <a class="project-tile" href="https://www.dropbox.com/s/dtd28msxa7k61kl/Canadian%20Listed%20Equity%20ETF%20Screener%20v1.0%20Public.xlsx?dl=0" target="_blank">
+        <a class="project-tile" href="https://www.dropbox.com/scl/fi/34acgqwh46cczmn27sfu3/Canadian-Listed-Equity-ETF-Screener-v1.1-Public.xlsx?rlkey=48am343vi1c7jh5gohx1tpqxw&dl=0" target="_blank">
           <p class="project-title">Canadian Listed Equity ETF Screener</p>
         </a>
         <a class="project-tile" href="https://www.dropbox.com/scl/fi/vgteqkm8pwdxm3y87hip9/Stock_Portfolio_Template.xlsm?rlkey=tofoaovv6flsykfsrtcxwqb4b&dl=0" target="_blank">
