--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="welcome-section" class="welcome-section">
       <div id="welcome-header">
         <h1>Trevor Herr</h1>
-        <p><i>Finance Professional</i></p>
+        <p><i>Law Student</i></p>
       </div>
       <div id="resume">
         <a id="resume-link" href="Resume_Trevor_Herr.pdf" target="_blank"><i class="fa-regular fa-file"></i> CV</a>
