--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a class="project-tile" href="https://www.dropbox.com/scl/fi/vgteqkm8pwdxm3y87hip9/Stock_Portfolio_Template.xlsm?rlkey=tofoaovv6flsykfsrtcxwqb4b&dl=0" target="_blank">
           <p class="project-title">Stock Valuation Template</p>
         </a>
-        <a class="project-tile" href="https://docs.google.com/spreadsheets/d/1qGZgrZfwQO--ti6PpbJiS8ML2R-jdB36/edit?usp=sharing&ouid=100306179132600832649&rtpof=true&sd=true" target="_blank">
+        <a class="project-tile" href="https://docs.google.com/spreadsheets/d/1qGZgrZfwQO--ti6PpbJiS8ML2R-jdB36/edit?usp=drive_link&ouid=100306179132600832649&rtpof=true&sd=true" target="_blank">
           <p class="project-title">Ontario Gas Price Analysis (Updated periodically)</p>
         </a>
         <a class="project-tile" href="https://drive.google.com/drive/folders/1pa4VQMFrw92ZE-z_N25KiBFcBT48r17h?usp=share_link" target="_blank">
