--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p class="buttontext">Twitter</p>
           </div>
         </a>
-        <a class="profile-link" href="mailto:trevor.herr@mail.utoronto.ca" target="_blank">
+        <a class="profile-link" href="mailto:therr@uwo.ca" target="_blank">
           <div id="email" class="button">
             <p><i class="fa-solid fa-envelope"></i> Email</p>
           </div>
