--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial scale=1.0">
     <title>Trevor Herr</title>
-    <meta name="description" content="Finance Professional">
+    <meta name="description" content="Law Student">
     <meta name="keywords" content="Finance, Stocks, Economics, Excel, Job, Toronto, Career, Canada, Canadian, Equity, Analyst, Data, Law, Legal, Business">
     <meta name="author" content="Trevor Herr">
     <link rel="stylesheet" href="styles.css">
